overflow fix

--- a/public/products/style.css
+++ b/public/products/style.css
@@ -60,6 +60,7 @@ body {
     display: flex;
     justify-content: space-around;
     flex-wrap: wrap;
+    overflow-y: auto;
 }
 
 .item-container > .item {
